--- a/spreadsplug/web/client/index.html
+++ b/spreadsplug/web/client/index.html
@@ -14,6 +14,7 @@
   </script>
 </head>
 <body>
+<div id="spreadsroot"></div>
 {% if debug %}
   <script src="/static/bundle-dev.js"></script>
 {% else %}
