Workaround to resolve missing foundation.css

--- a/spreadsplug/web/client/index.html
+++ b/spreadsplug/web/client/index.html
@@ -12,6 +12,7 @@
     window.plugins = {{plugins|tojson|safe}};
     window.metadataSchema = {{metaschema|tojson|safe}}
   </script>
+  <link rel="stylesheet" href="/static/foundation.css">
 </head>
 <body>
 <div id="spreadsroot"></div>
